--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@ html, body {
           <h2>Contratulations, you deployed the container locally.</h2>
           <p class="subtext">If you would like to run this container publicly check out the links below to get started.</p>
         {% else %}
-					<h2>Thankyou!, your service has successfully deployed on AWS App Runner.</h2>
+					<h2>Thankyou!!, your service has successfully deployed on AWS App Runner.</h2>
         {% endif %}
 			</p>
 		</div>
